# conf4py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/conf4py/: conf4py.py
