[project]
name = "conf4py"
version = "0.0.1"
authors = [
  { name="Charles de Jager", email="charles.de.jager@outlook.com" },
]
description = "A simple to use configuration manager for python"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"