[project]
name = "conf4py"
version = "0.0.1"
authors = [
  { name="Charles de Jager", email="charles.de.jager@outlook.com" },
]
description = "A simple to use configuration manager for python"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
  "pydantic",
  "pydantic_settings",
]

[build-system]
requires = ["hatchling >= 1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/conf4py"]

[project.urls]
Homepage = "https://github.com/CharlesDeJager/conf4py"
Issues = "https://github.com/CharlesDeJager/conf4py/issues"